--- a/Bim/MainWindow.xaml
+++ b/Bim/MainWindow.xaml
@@ -5,12 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Bim"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="630" ResizeMode="NoResize">
     <Grid>
         <TabControl>
             <TabItem x:Name="people" Header="Люди">
-                <StackPanel>
-                    <DataGrid ItemsSource="{Binding Persons}" SelectedItem="{Binding currentPerson}" HorizontalAlignment="Left" CanUserAddRows="False" Width="610" RowHeight="25"  ColumnWidth="200" AutoGenerateColumns="False">
+                <Grid>
+                    <StackPanel>
+                    <DataGrid ItemsSource="{Binding Persons}" SelectedItem="{Binding currentPerson}" HorizontalAlignment="Left" CanUserAddRows="False" Width="610" RowHeight="25"  AutoGenerateColumns="False">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="ID" Binding="{Binding ID}"></DataGridTextColumn>
                             <DataGridTextColumn Header="Name" Binding="{Binding Name}"></DataGridTextColumn>
@@ -18,10 +19,19 @@
                         </DataGrid.Columns>
                     </DataGrid>
                 </StackPanel>
+                <StackPanel Orientation="Horizontal" Height="50" VerticalAlignment="Bottom">
+                    <Button Content="Назад" Margin="5"  VerticalAlignment="Center" Command="{Binding BackCommand}"/>
+                    <Button Content="Вперед" Margin="5"  VerticalAlignment="Center" Command="{Binding ForwardCommand}"/>
+                    <Button Content="Средний возраст людей с именем: " Margin="5"  VerticalAlignment="Center" Command="{Binding AverageCommand}"></Button>
+                    <TextBox Width="170"  MaxHeight="27" FontSize="20" Text="{Binding UserName}"></TextBox>
+                    <TextBlock Text="{Binding AverAge}" Margin="5"  FontSize="27" VerticalAlignment="Center"></TextBlock>
+                </StackPanel>
+                </Grid>
             </TabItem>
             <TabItem x:Name="contact" Header="Контакты">
-                <StackPanel>
-                    <DataGrid ItemsSource="{Binding Contacts}" SelectedItem="{Binding currentContact}" HorizontalAlignment="Left" CanUserAddRows="False" Width="610" RowHeight="25"  ColumnWidth="200" AutoGenerateColumns="False">
+                <Grid>
+                    <StackPanel>
+                    <DataGrid ItemsSource="{Binding Contacts}" SelectedItem="{Binding currentContact}" HorizontalAlignment="Left" CanUserAddRows="False" Width="610" RowHeight="25" AutoGenerateColumns="False" VerticalScrollBarVisibility="Auto">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="From" Binding="{Binding From}"></DataGridTextColumn>
                             <DataGridTextColumn Header="To" Binding="{Binding To}"></DataGridTextColumn>
@@ -30,14 +40,18 @@
                         </DataGrid.Columns>
                     </DataGrid>
                 </StackPanel>
+                <StackPanel Orientation="Horizontal" Height="50" VerticalAlignment="Bottom">
+                    <Button Content="Назад" Margin="5"  VerticalAlignment="Center" Command="{Binding BackCommand}"/>
+                    <Button Content="Вперед" Margin="5"  VerticalAlignment="Center" Command="{Binding ForwardCommand}"/>
+                    <TextBlock Text="Начало: " Margin="5"  VerticalAlignment="Center"></TextBlock>
+                    <DatePicker IsDropDownOpen="False" SelectedDateFormat="Short" Margin="5"  VerticalAlignment="Center" SelectedDate="{Binding DateIn}"></DatePicker>
+                    <TextBlock Text="Конец: " Margin="5"  VerticalAlignment="Center"></TextBlock>
+                    <DatePicker IsDropDownOpen="False" SelectedDateFormat="Short" Margin="5"  VerticalAlignment="Center" SelectedDate="{Binding DateOut}"></DatePicker>
+                    <Button Content="Показать" Margin="5"  VerticalAlignment="Center" Command="{Binding ShowCommand}"></Button>
+                </StackPanel>
+                </Grid>
             </TabItem>
         </TabControl>
-        <StackPanel Orientation="Horizontal" Height="50" VerticalAlignment="Bottom">
-            <TextBlock Text="Номер страницы" VerticalAlignment="Center" Margin="5"/>
-            <TextBox Name="PageNum" VerticalAlignment="Center" Width="30" Text="{Binding PageNumber}" />
-            <Button Content="Перейти" VerticalAlignment="Center" Margin="5" Command="{Binding GoCommand}"/>
-            <Button Content="Вперед" Margin="5"  VerticalAlignment="Center" Command="{Binding ForwardCommand}"/>
-            <Button Content="Назад" Margin="5"  VerticalAlignment="Center" Command="{Binding BackCommand}"/>
-        </StackPanel>
+
     </Grid>
 </Window>
